--- a/thread_affair/package.json
+++ b/thread_affair/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/fontawesome-free": "^5.15.3",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
+    "bootstrap": "^5.0.1",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^7.0.0",
     "css-loader": "^5.0.1",
