--- a/thread_affair/package.json
+++ b/thread_affair/package.json
@@ -14,6 +14,7 @@
     "@babel/core": "^7.12.13",
     "@babel/preset-env": "^7.12.13",
     "@fortawesome/fontawesome-free": "^5.15.3",
+    "@glidejs/glide": "^3.4.1",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "bootstrap": "^5.0.1",
@@ -27,8 +28,8 @@
     "html-loader": "^1.3.2",
     "html-webpack-plugin": "^5.0.0",
     "mini-css-extract-plugin": "^1.3.5",
-    "node-sass": "^5.0.0",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
+    "sass": "^1.38.1",
     "sass-loader": "^10.1.1",
     "static-server": "^2.2.1",
     "style-loader": "^2.0.0",
